# quantboard

./: psql.yaml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  analytics.py  auth.py  database.py  indicator.py  main.py  model.py  news.py  password.txt  pyproject.toml  routes.py
frontend/: package-lock.json
frontend/src/: App.css  App.js
frontend/src/components/: Analytics.jsx  Auth.jsx  Dashboard.jsx  Portfolio.jsx
